US15898 Refactor Jumbotron Inline Video Update styles

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - node_modules
-  - vendor
+  # - vendor
   - README.md
 
 # Assets declared for jekyll-assets gem
